kuber_templates/hotel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
  labels:
    name: "gateway-app"
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      name: gateway-app
      labels:
        app: gateway-app
    spec:
      containers:
      - name: gateway-app
        image: ghcr.io/laserkillers/rsoi_labs/lab_2_service_gateway:latest
        imagePullPolicy: Always # this is required to force pull image
        ports:
        - containerPort: 8080

      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-app-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gateway-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reserve-app
  labels:
    name: "reserve-app"
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: reserve-app
  template:
    metadata:
      name: reserve-app
      labels:
        app: reserve-app
    spec:
      containers:
      - name: reserve-app
        image: ghcr.io/laserkillers/rsoi_labs/lab_2_service_reserve:latest
        imagePullPolicy: Always # this is required to force pull image
        ports:
        - containerPort: 8070

      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: reserve-app-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8070
    protocol: TCP
    name: http
  selector:
    app: reserve-app


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  labels:
    name: "payment-app"
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      name: payment-app
      labels:
        app: payment-app
    spec:
      containers:
      - name: payment-app
        image: ghcr.io/laserkillers/rsoi_labs/lab_2_payment_service:latest
        imagePullPolicy: Always # this is required to force pull image
        ports:
        - containerPort: 8060

      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: payment-app-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8060
    protocol: TCP
    name: http
  selector:
    app: payment-app


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-app
  labels:
    name: "loyalty-app"
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: loyalty-app
  template:
    metadata:
      name: loyalty-app
      labels:
        app: loyalty-app
    spec:
      containers:
      - name: loyalty-app
        image: laserkillers/rsoi-lab-4-gateway:latest
        imagePullPolicy: Always # this is required to force pull image
        ports:
        - containerPort: 8050

#      imagePullSecrets:
#        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-app-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8050
    protocol: TCP
    name: http
  selector:
    app: loyalty-app
