kuber_templates/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app
  labels:
    name: "keycloak-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      name: keycloak-app
      labels:
        app: keycloak-app
    spec:
      containers:
      - name: keycloak-app
        image: quay.io/keycloak/keycloak:20.0.2
        args: ["start-dev", "--db=postgres", "--http-relative-path /auth"]
        #args: ["start", "--optimized", "--hostname-url=http://0.0.0.0:8080/auth", "--http-relative-path=/auth", "--hostname-url=http://0.0.0.0:8080/", "hostname-strict-https=false"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-app-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: keycloak-app
