kuber_templates/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsoi-lab-5-ingress
  # namespace: push-workflow
spec:
  ingressClassName: nginx
  rules:
  - host: rsoi-lab-5.com
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-app-svc
            port:
              number: 80
